// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typography utilities createCSSCapsizeTextStyle should create a valid CSS typography object 1`] = `
Object {
  "capHeight": "55",
  "capsize": Object {
    "::after": Object {
      "content": "''",
      "display": "table",
      "marginTop": "-0.1256em",
    },
    "::before": Object {
      "content": "''",
      "display": "table",
      "marginBottom": "-0.1256em",
    },
    "fontSize": "75.625px",
    "lineHeight": "74px",
  },
  "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
  "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
  "fontSize": "",
  "fontStyle": undefined,
  "fontWeight": "400",
  "letterSpacing": "0px",
  "lineGap": "19",
  "textDecoration": undefined,
  "textTransform": undefined,
}
`;

exports[`typography utilities getCSSTextStyles should retrieve valid text styles 1`] = `
Object {
  "::after": Object {
    "content": "''",
    "display": "table",
    "marginTop": "-0.25em",
  },
  "::before": Object {
    "content": "''",
    "display": "table",
    "marginBottom": "-0.25em",
  },
  "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
  "fontSize": "36px",
  "fontStyle": undefined,
  "fontWeight": "700",
  "letterSpacing": "-0.03em",
  "lineHeight": "44.1818px",
  "textDecoration": undefined,
  "textTransform": undefined,
}
`;

exports[`typography utilities getCSSTypography should create a valid CSS typography object 1`] = `
Object {
  "fonts": Object {
    "monospace": "ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,\\"Liberation Mono\\",\\"Courier New\\",monospace",
    "sans": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
    "sansAlternate": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
    "serif": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "var": Object {
      "monospace": "--font-family-serif",
      "sans": "--font-family-monospace",
      "sansAlternate": "--font-family-sans",
      "serif": "--font-family-sans-alternate",
    },
    "varNames": Object {
      "monospace": "var(--font-family-serif)",
      "sans": "var(--font-family-monospace)",
      "sansAlternate": "var(--font-family-sans)",
      "serif": "var(--font-family-sans-alternate)",
    },
  },
  "headings": Object {
    "desktop": Object {
      "h1": Object {
        "capHeight": "26.1818",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.25em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.25em",
          },
          "fontSize": "36px",
          "lineHeight": "44.1818px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "36",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.03em",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h2": Object {
        "capHeight": "20.3636",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2857em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2857em",
          },
          "fontSize": "28px",
          "lineHeight": "36.3636px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "28",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h3": Object {
        "capHeight": "14.5455",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.35em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.35em",
          },
          "fontSize": "20px",
          "lineHeight": "28.5455px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "20",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h4": Object {
        "capHeight": "11.6364",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4375em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4375em",
          },
          "fontSize": "16px",
          "lineHeight": "25.6364px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "h1": Object {
        "capHeight": "26",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2797em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2797em",
          },
          "fontSize": "35.75px",
          "lineHeight": "46px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.03em",
        "lineGap": "20",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h2": Object {
        "capHeight": "20",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3273em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3273em",
          },
          "fontSize": "27.5px",
          "lineHeight": "38px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h3": Object {
        "capHeight": "16",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "22px",
          "lineHeight": "32px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h4": Object {
        "capHeight": "14",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "19.25px",
          "lineHeight": "28px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "tablet": Object {
      "h1": Object {
        "capHeight": "26",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2797em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2797em",
          },
          "fontSize": "35.75px",
          "lineHeight": "46px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "-0.03em",
        "lineGap": "20",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h2": Object {
        "capHeight": "20",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3273em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3273em",
          },
          "fontSize": "27.5px",
          "lineHeight": "38px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "-0.02em",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h3": Object {
        "capHeight": "16",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "22px",
          "lineHeight": "32px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "h4": Object {
        "capHeight": "14",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3636em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3636em",
          },
          "fontSize": "19.25px",
          "lineHeight": "28px",
        },
        "font": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
  "labels": Object {
    "desktop": Object {
      "medium": Object {
        "capHeight": "10.5688",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4032em",
          },
          "fontSize": "15px",
          "lineHeight": "22.5688px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "15",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "9.8643",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4254em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4317em",
          },
          "fontSize": "14px",
          "lineHeight": "21.8643px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.4551",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5032em",
          },
          "fontSize": "12px",
          "lineHeight": "20.4551px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "medium": Object {
        "capHeight": "12.6826",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3302em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3365em",
          },
          "fontSize": "18px",
          "lineHeight": "24.6826px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "11.2734",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3718em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3782em",
          },
          "fontSize": "16px",
          "lineHeight": "23.2734px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.4551",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5032em",
          },
          "fontSize": "12px",
          "lineHeight": "20.4551px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "styles": Object {
      "bold": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "boldUppercase": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0.06em",
        "textDecoration": undefined,
        "textTransform": "uppercase",
      },
      "italic": Object {
        "fontStyle": "italic",
        "fontWeight": "400",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "italicBold": Object {
        "fontStyle": "italic",
        "fontWeight": "400",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "normal": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "uppercase": Object {
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0.06em",
        "textDecoration": undefined,
        "textTransform": "uppercase",
      },
    },
    "tablet": Object {
      "medium": Object {
        "capHeight": "11.978",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3498em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3561em",
          },
          "fontSize": "17px",
          "lineHeight": "23.978px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "17",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "10.5688",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4032em",
          },
          "fontSize": "15px",
          "lineHeight": "22.5688px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "15",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "7.7505",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.5423em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5486em",
          },
          "fontSize": "11px",
          "lineHeight": "19.7505px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "11",
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
  "paragraphs": Object {
    "desktop": Object {
      "large": Object {
        "capHeight": "12.6826",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5032em",
          },
          "fontSize": "18px",
          "lineHeight": "30.6826px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "18",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "medium": Object {
        "capHeight": "11.2734",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5032em",
          },
          "fontSize": "16px",
          "lineHeight": "27.2734px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "9.8643",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5032em",
          },
          "fontSize": "14px",
          "lineHeight": "23.8643px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.4551",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4968em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.5032em",
          },
          "fontSize": "12px",
          "lineHeight": "20.4551px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "large": Object {
        "capHeight": "12.6826",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4413em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4476em",
          },
          "fontSize": "18px",
          "lineHeight": "28.6826px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "medium": Object {
        "capHeight": "11.2734",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4343em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4407em",
          },
          "fontSize": "16px",
          "lineHeight": "25.2734px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "9.8643",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4254em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4317em",
          },
          "fontSize": "14px",
          "lineHeight": "21.8643px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.4551",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4135em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4198em",
          },
          "fontSize": "12px",
          "lineHeight": "18.4551px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "10",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "styles": Object {
      "bold": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "boldUppercase": Object {
        "fontStyle": undefined,
        "fontWeight": "600",
        "letterSpacing": "0.03em",
        "textDecoration": undefined,
        "textTransform": "uppercase",
      },
      "italic": Object {
        "fontStyle": "italic",
        "fontWeight": "400",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "italicBold": Object {
        "fontStyle": "italic",
        "fontWeight": "600",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "normal": Object {
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "uppercase": Object {
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0.03em",
        "textDecoration": undefined,
        "textTransform": "uppercase",
      },
    },
    "tablet": Object {
      "large": Object {
        "capHeight": "12.6826",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4413em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4476em",
          },
          "fontSize": "18px",
          "lineHeight": "28.6826px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "18",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "16",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "medium": Object {
        "capHeight": "11.2734",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4343em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4407em",
          },
          "fontSize": "16px",
          "lineHeight": "25.2734px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "16",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "14",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "small": Object {
        "capHeight": "9.8643",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4254em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4317em",
          },
          "fontSize": "14px",
          "lineHeight": "21.8643px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "14",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "12",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "xSmall": Object {
        "capHeight": "8.4551",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.4135em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4198em",
          },
          "fontSize": "12px",
          "lineHeight": "18.4551px",
        },
        "font": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontFamily": "ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\"",
        "fontSize": "12",
        "fontStyle": undefined,
        "fontWeight": "400",
        "letterSpacing": "0px",
        "lineGap": "10",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
  "titles": Object {
    "desktop": Object {
      "t1": Object {
        "capHeight": "42",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.3485em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.4015em",
          },
          "fontSize": "60px",
          "lineHeight": "87px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "45",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "t2": Object {
        "capHeight": "36",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2846em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3376em",
          },
          "fontSize": "51.4286px",
          "lineHeight": "68px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "32",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
    "mobile": Object {
      "t1": Object {
        "capHeight": "34",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2206em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2736em",
          },
          "fontSize": "48.5714px",
          "lineHeight": "58px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "24",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "t2": Object {
        "capHeight": "28",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2485em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3015em",
          },
          "fontSize": "40px",
          "lineHeight": "50px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "22",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
    "tablet": Object {
      "t1": Object {
        "capHeight": "38",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2314em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.2844em",
          },
          "fontSize": "54.2857px",
          "lineHeight": "66px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "28",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
      "t2": Object {
        "capHeight": "32",
        "capsize": Object {
          "::after": Object {
            "content": "''",
            "display": "table",
            "marginTop": "-0.2579em",
          },
          "::before": Object {
            "content": "''",
            "display": "table",
            "marginBottom": "-0.3109em",
          },
          "fontSize": "45.7143px",
          "lineHeight": "58px",
        },
        "font": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontFamily": "PT Serif,ui-serif,Georgia,Cambria,\\"Times New Roman\\",Times,serif",
        "fontSize": "",
        "fontStyle": undefined,
        "fontWeight": "700",
        "letterSpacing": "0px",
        "lineGap": "26",
        "textDecoration": undefined,
        "textTransform": undefined,
      },
    },
  },
}
`;
